--- a/FormVer2/Views/FormComponent/IndexFormComponent.cshtml
+++ b/FormVer2/Views/FormComponent/IndexFormComponent.cshtml
@@ -29,7 +29,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><a asp-action="CreateFormComponent" asp-route-formId="@Model.FormId" type="button" class="btn btn-primary float-right"><i class="fas fa-plus"></i> Components</a></h3>
+            <h3 class="card-title"><a asp-action="CreateFormComponent" asp-route-formId="@Model.FormId" type="button" class="btn btn-primary float-right"><i class="fas fa-plus"></i>  Add Component</a></h3>
         </div>
         <div class="card-body p-0">
             <table class="table table-striped projects">
@@ -84,7 +84,7 @@
                                 @Html.DisplayFor(modelItem => item.FormComponent.DisplayOrder)
                             </td>
                             <td class="project-actions text-right">
-                                <a asp-controller="Item" asp-action="IndexItem" asp-route-formId="@Model.FormId" asp-route-componentId="@item.FormComponent.ComponentId" asp-route-displayorder="@item.FormComponent.DisplayOrder" class="btn btn-primary btn-sm">
+                                <a asp-controller="Item" asp-action="IndexItem" asp-route-formcomponentId="@item.FormComponent.Id" class="btn btn-primary btn-sm">
                                     <i class="fas fa-folder">
                                     </i>
                                     Items (@item.NumOfItem)
