--- a/FormVer2/Views/Item/CreateItem.cshtml
+++ b/FormVer2/Views/Item/CreateItem.cshtml
@@ -5,33 +5,72 @@
     ViewData["Title"] = "Create item";
 }
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateItem">
-            <div class="form-group">
-                <label asp-for="FormId" class="control-label"></label>
-                <input asp-for="FormId" class="form-control" />
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Create Item</h1>
             </div>
-            <div class="form-group">
-                <label asp-for="ComponentId" class="control-label"></label>
-                <input asp-for="ComponentId" class="form-control" />
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a asp-controller="Form" asp-action="IndexForm">Form</a></li>
+                    <li class="breadcrumb-item"><a asp-controller="FormComponent" asp-action="IndexFormComponent" asp-route-formId="@Model.FormId">Component</a></li>
+                    <li class="breadcrumb-item"><a asp-controller="Item" asp-action="IndexItem" asp-route-formcomponentId="@Model.FormComponentId">Item</a></li>
+                    <li class="breadcrumb-item active">Create Item</li>
+                </ol>
             </div>
-            <div class="form-group">
-                <label asp-for="Alias" class="control-label"></label>
-                <input asp-for="Alias" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="IsPreSelected" class="control-label"></label>
-                <input asp-for="IsPreSelected" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="DisplayOrder" class="control-label"></label>
-                <input asp-for="DisplayOrder" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a asp-controller="Item" asp-action="IndexItem" asp-route-formId="@Model.FormId" asp-route-componentId="@Model.ComponentId" class="btn btn-success">Cancel</a>
-            </div>
-        </form>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
+
+<!-- Main content -->
+<section class="content">
+    <div class="container-fluid">
+        <!-- SELECT2 EXAMPLE -->
+        <div class="card card-default">
+            <form asp-action="CreateItem">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label asp-for="Alias" class="control-label"></label>
+                                <input asp-for="Alias" class="form-control" />
+                            </div>
+                            <!-- /.form-group -->
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-md-1"></div>
+                        <!-- /.col -->
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label asp-for="DisplayOrder" class="control-label">Order</label>
+                                <input asp-for="DisplayOrder" class="form-control" />
+                            </div>
+                            <!-- /.form-group -->
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-md-1"></div>
+                        <!-- /.col -->
+                        <div class="col-md-1">
+                            <div class="form-group">
+                                <label asp-for="IsPreSelected" class="control-label">Selected</label>
+                                <input asp-for="IsPreSelected" class="form-control" />
+                            </div>
+                            <!-- /.form-group -->
+                        </div>
+                        <!-- /.col -->
+                    </div>
+                </div>
+                <div class="card-footer">
+                    @Html.HiddenFor(modelItem => Model.FormId)
+                    @Html.HiddenFor(modelItem => Model.FormComponentId)
+                    <a asp-controller="Item" asp-action="IndexItem" asp-route-formcomponentId="@Model.FormComponentId" class="btn btn-secondary">Cancel</a>
+                    <input type="submit" value="Create New Item" class="btn btn-success float-right" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
+    <!-- /.container-fluid -->
+</section>
+<!-- /.content -->
