--- a/FormVer2/Views/Shared/_TextBox.cshtml
+++ b/FormVer2/Views/Shared/_TextBox.cshtml
@@ -1,9 +1,7 @@
 ﻿@using FormVer2.Models.BL.PreviewBL
 @model string
 
-<div style="border: 2px solid black;" class="mt-1">
-    <p>@Model</p>
-    <div class="form-group mr-2">
-        <input class="form-control">
-    </div>
+<div class="form-group">
+    <label class="control-label">@Model</label>
+    <input class="form-control" />
 </div>
