--- a/FormVer2/Views/Preview/IndexPreview.cshtml
+++ b/FormVer2/Views/Preview/IndexPreview.cshtml
@@ -7,19 +7,57 @@
     ViewData["Title"] = "Preview";
 }
 
-<div class="tab-content" id="nav-tabContent">
-    <div style="padding:1rem;">
-        @foreach (var c in Model.ListComponent)
-        {
-            var str = "_" + c.Name;
-            if (c.ContainValue)
-            {
-                Html.RenderPartial(str, c);
-            }
-            else
-            {
-                Html.RenderPartial(str, c.Alias);
-            }
-        }
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Preview</h1>
+            </div>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a asp-controller="Form" asp-action="IndexForm">Form</a></li>
+                    <li class="breadcrumb-item active">Preview</li>
+                </ol>
+            </div>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
+
+<!-- Main content -->
+<section class="content">
+    <!-- Default box -->
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <div class="card card-info">
+                <div class="card-header">
+                    <label>Description</label>
+                    <h3 class="card-title">@Model.Title</h3>
+                </div>
+                <div class="card-body">
+                    <p>@Model.ShortDescription</p>
+                </div>
+                <div class="card-body">
+                    @foreach (var c in Model.ListComponent)
+                    {
+                        var str = "_" + c.Name;
+                        if (c.ContainValue)
+                        {
+                            Html.RenderPartial(str, c);
+                        }
+                        else
+                        {
+                            Html.RenderPartial(str, c.Alias);
+                        }
+                    }
+                </div>
+                <!-- /.card-body -->
+            </div>
+            <!-- /.card -->
+        </div>
+        <div class="col-md-3"></div>
     </div>
-</div>
+    <!-- /.card -->
+</section>
+<!-- /.content -->
