--- a/FormVer2/Views/Shared/_DropdownList.cshtml
+++ b/FormVer2/Views/Shared/_DropdownList.cshtml
@@ -1,16 +1,15 @@
 @using FormVer2.Models.BL.PreviewBL
 @model PreviewComponentDTO
 
-<div class="dropdown mt-1" style="border: 2px solid black;">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-        @Model.Alias
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+<div class="form-group">
+    <label>@Model.Alias</label>
+    <select class="form-control select2" style="width: 100%;">
+        <option>Select one</option>
         @{
             for (int i = 0; i < Model.ListItem.Count(); i++)
             {
-                <a class="dropdown-item" href="#">@Model.ListItem[i].Alias</a>
+                <option>@Model.ListItem[i].Alias</option>
             }
         }
-    </div>
+    </select>
 </div>
