--- a/FormVer2/Views/Shared/_RadioList.cshtml
+++ b/FormVer2/Views/Shared/_RadioList.cshtml
@@ -1,16 +1,18 @@
 @using FormVer2.Models.BL.PreviewBL
 @model PreviewComponentDTO
 
-<div style="border: 2px solid black;" class="mt-1">
-    <p>@Model.Alias</p>
-    <div class="list-group w-50">
-        @{
-            for (int i = 0; i < Model.ListItem.Count(); i++)
-            {
-                <label class="list-group-item">
-                    <input type="radio" class="form-check-input me-1" name="hobbies"> @Model.ListItem[i].Alias
-                </label>
-            }
+<div class="form-group clearfix">
+    <label>@Model.Alias</label>
+    <br />
+    @{
+        for (int i = 0; i < Model.ListItem.Count(); i++)
+        {
+            <div class="form-group clearfix">
+                <div class="icheck-primary d-inline">
+                    <input type="radio" id="@i.ToString()">
+                    <label for="@i.ToString()" style="font-weight: normal;">@Model.ListItem[i].Alias</label>
+                </div>
+            </div>
         }
-    </div>
+    }
 </div>
