--- a/FormVer2/Views/Item/IndexItem.cshtml
+++ b/FormVer2/Views/Item/IndexItem.cshtml
@@ -28,7 +28,9 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><a asp-action="CreateItem" asp-route-formcomponentId="@Model.FormComponentId" type="button" class="btn btn-primary float-right"><i class="fas fa-plus"></i>  Add Item</a></h3>
+            <h3 class="card-title">
+                List of items that belongs to the component (<a class="secondary">@Model.ComponentName</a>) in the form (<a class="secondary">@Model.FormName</a>)
+            </h3>
         </div>
         <div class="card-body p-0">
             <table class="table table-striped projects">
@@ -80,6 +82,10 @@
             </table>
         </div>
         <!-- /.card-body -->
+        <div class="card-footer">
+            <h3 class="card-title"><a asp-action="CreateItem" asp-route-formcomponentId="@Model.FormComponentId" type="button" class="btn btn-primary"><i class="fas fa-plus"></i>  Add Item</a></h3>
+            <h3 class="card-title float-right"><a asp-controller="FormComponent" asp-action="IndexFormComponent" asp-route-formId="@Model.FormId" type="button" class="btn btn-secondary"><i class="fa-solid fa-arrow-rotate-left"></i>  Back to Component</a></h3>
+        </div>
     </div>
     <!-- /.card -->
 </section>
